# WidgetUI

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
cmakes/: import3rd.cmake  importImpl.cmake  importModule.cmake  importPrivate.cmake  importProjectConfig.cmake  importQt.cmake  importSource.cmake  importUtils.cmake
include/: SystemTray.h  WidgetFrame.h
module/WidgetTitleBar/: WidgetTitleBar.cpp  WidgetTitleBar.h
private/SystemTrayPrivate/: SystemTrayPrivate.cpp  SystemTrayPrivate.h
private/WidgetFramePrivate/: WidgetFramePrivate.cpp  WidgetFramePrivate.h
resources/css/: CloseBtn.css  TitleBar.css  WidgetTitleBar.css
resources/css/SystemTrayCss/: SystemTray.css
resources/css/TitleBarCss/: MaxBtn.css  MinBtn.css
src/: SystemTray.cpp  WidgetFrame.cpp
test/: CMakeLists.txt  main.cpp
utils/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.h
utils/StyleLoader/: StyleLoader.cpp  StyleLoader.h
utils/Win32Kit/: Win32Kit.cpp  Win32Kit.h
utils/Win32Tools/: Win32Tools.hpp
